Add installation and testing targets, and a new header file for ROS2CAN bridge

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,8 +27,14 @@ add_executable(ros2can_bridge src/ros2socketcan.cpp)
 TARGET_LINK_LIBRARIES(ros2can_bridge dl -lboost_system -pthread  -lcrypt -lm -lpthread)
 
 ament_target_dependencies(ros2can_bridge rclcpp std_msgs can_msgs)
-install(TARGETS 
-        ros2can_bridge
-        DESTINATION bin)
-        
+
+install(TARGETS ros2can_bridge
+  DESTINATION lib/${PROJECT_NAME})
+
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  ament_lint_auto_find_test_dependencies()
+endif()
+
+
 ament_package()
